# Sidekick

./: .gitignore  .readthedocs.yaml  LICENSE.md  README.md  canvas.py  game_of_life.py  hero.py  issues.md  protocol.md
cloudflare/: index.js  package.json  wrangler.json
docs/: architecture.md  canvas_zh.md  cloudflare-development.md  connection_md.md  control_zh.md  extension-development.md  observable_zh.md  protocol.md  protocol_zh.md  python-development.md  state_management_zh.md  user-guide.md  viz_zh.md  webapp-development.md
examples/: bouncing_ball.py  calculator.py  canvas.py  comprehensive_layout.py  console_echo.py  control_show.py  forest_fire.py  forest_fire_simulation.py  hanoi.py  (+9 more)
libs/python/: README.md  pyproject.toml
libs/python/docsrc/: conf.py  requirements.txt  sidekick.rst
libs/python/src/sidekick/: __init__.py  _version.py  base_component.py  base_module.py  button.py  canvas.py  channel.py  column.py  component.py  config.py  connection.py  connection_service.py  console.py  control.py  errors.py  events.py  exceptions.py  grid.py  label.py  markdown.py  modules.py  observable_value.py  pyodide_channel.py  row.py  server_connector.py  textbox.py  utils.py  viz.py  websocket_channel.py
libs/python/src/sidekick/core/: __init__.py  __main__.py  communication_manager.py  cpython_task_manager.py  exceptions.py  factories.py  pyodide_communication_manager.py  pyodide_task_manager.py  status.py  task_manager.py  utils.py  websocket_communication_manager.py
libs/python/tests/core/: test_cpython_task_manager.py  test_pyodide_task_manager.py
(+121 files in other folders)
