[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sidekick-py"
version = "0.1.0"
description = "Client library for Sidekick Visual Coding Buddy"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
authors = [
    { name = "Enjan Chou", email = "zhouer@gmail.com" },
]
dependencies = [
    "websocket-client >= 1.0.0"
]

[tool.setuptools.packages.find]
where = ["src"]
